src/scss/_header.scss
@use "~bulma/sass/utilities/initial-variables" as initial-variables;
@use "~bulma/sass/utilities/derived-variables" as derived-variables;
@use "~bulma/sass/utilities/mixins" as mixins;
@use "variables" as hvars;
@use "mixins" as hmixins;

.navbar {
  min-height: 3rem;
  font-size: hvars.$h-navbar-font-size;
  @include hmixins.h-animation(transform);

  &.h-is-hidden {
    transform: translateY(-100%);
  }

  #h-navbar-bottom {
    position: absolute;
    color: transparent;
    background-color: transparent;
    height: 0.5rem;
    left: 0;
    right: 0;
    top: 100%;
  }

  #h-logo {
    font-size: hvars.$h-navbar-logo-font-size;
    line-height: 0;
    color: derived-variables.$text-strong;
    font-weight: 500;

    &:hover {
      color: derived-variables.$text-strong;
    }

    img {
      padding-right: 0.4375rem;
      height: 1.75rem;
    }

    .is-sub {
      padding-left: 0.3125rem;
      font-weight: 400;
    }
  }

  .navbar-item,
  .navbar-link {
    &:hover {
      background-color: transparent;
    }

    img {
      max-height: 2rem;
    }

    .icon {
      &:only-child {
        margin-right: -0.125rem;
      }

      img {
        height: 0.875rem;
      }
    }
  }

  .navbar-item.is-active {
    color: inherit;
    background-color: transparent;
  }

  @include mixins.desktop {
    .has-dropdown {
      .navbar-link {
        padding-right: 1.75rem;

        &:after {
          right: 0.8125rem;
        }
      }
    }

    .navbar-dropdown {
      box-shadow: none;

      .navbar-item {
        &:hover {
          background-color: transparent;
          color: derived-variables.$link;
          transition: none;
        }
      }
    }
  }

  .navbar-link {
    &:after {
      border-width: 2px;
      border-color: hvars.$h-navbar-icon-color;
      width: 0.375rem;
      height: 0.375rem;
    }
  }

  .icon {
    color: hvars.$h-navbar-icon-color;
  }

  .navbar-burger {
    color: hvars.$h-navbar-icon-color;
  }

  .is-github-icon {
    color: hvars.$h-github;
  }

  .navbar-burger {
    span {
      height: 2px;
      width: 18px;
    }

    &:hover {
      background-color: transparent;
    }
  }
}

